# learning_langchain_basics

./: .gitignore  README.md  main.py  pyproject.toml
1_simple_faq_bot/: faq_chatbot.py
history_aware_qa_bot/: development.env.example  main.py  query_explicit.py  query_lcel.py
history_aware_qa_bot_2/: contextualize_prompt.py  main.py  query_explicit.py  query_lcel.py  vector_retriever.py
streamlit_qa_app_3/: app_settings.py  qa_system_prompt.py  query_explicit.py  streamlit_app.py  vector_retriever.py
streamlit_qa_app_3/di/: container.py  default.py  singleton.py
