[project]
name = "learning-langchain-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "langchain[google-genai]>=1.0.7",
    "langchain-community>=0.4.1",
]


[tool.ruff]
target-version="py312"
line-length=120
indent-width=4
